🩹 remove test commenting

--- a/experiments/diagnostics/diagnostics_search.yaml
+++ b/experiments/diagnostics/diagnostics_search.yaml
@@ -1,9 +1,9 @@
-# data:
-#   path:
-#   - 'data/airfoil.data'
-#   - 'data/bikesharing.data'
-#   - 'data/energy.data'
+data:
+  path:
+  - 'data/airfoil.data'
+  - 'data/bikesharing.data'
+  - 'data/energy.data'
 rng:
 - 1
 - 2
-# - 3
+- 3
