--- a/experiments/replicate_uci/debug.yaml
+++ b/experiments/replicate_uci/debug.yaml
@@ -1,5 +1,5 @@
 saving_dir: 'results/repl_uci/'
-experiment_name: 'mclmc'
+experiment_name: 'mclmc_debug'
 data:
   path: 'data/airfoil.data'
   source: 'local'
@@ -15,7 +15,7 @@ data:
   test_split: 0.2
 model:
   model: FCN
-  hidden_structure: [4, 4, 4]
+  hidden_structure: [16, 16, 2]
   activation: 'relu'
   use_bias: true
 training:
