--- a/experiments/replicate_uci/partition_MCLMC.yaml
+++ b/experiments/replicate_uci/partition_MCLMC.yaml
@@ -1,7 +1,7 @@
 saving_dir: 'results/repl_uci/'
-experiment_name: 'mclmc_airfoil_2_hidden_layers_Gaussian'
+experiment_name: 'partition_MCLMC'
 data:
-  path: 'data/airfoil.data'
+  path: 'data/energy.data'
   source: 'local'
   data_type: 'tabular'
   task: 'regr'
@@ -15,7 +15,7 @@ data:
   test_split: 0.2
 model:
   model: FCN
-  hidden_structure: [16, 16, 2]
+  hidden_structure: [16, 16, 16, 16, 16, 16, 16, 16, 2]
   activation: 'relu'
   use_bias: true
 training:
