--- a/experiments/replicate_uci/partition_NUTS.yaml
+++ b/experiments/replicate_uci/partition_NUTS.yaml
@@ -1,5 +1,5 @@
 saving_dir: 'results/repl_uci/'
-experiment_name: 'mclmc_energy_4_hidden_layers_64_neurons'
+experiment_name: 'partition_NUTS'
 data:
   path: 'data/energy.data'
   source: 'local'
@@ -15,7 +15,7 @@ data:
   test_split: 0.2
 model:
   model: FCN
-  hidden_structure: [64, 64, 64, 64, 2]
+  hidden_structure: [16, 16, 16, 16, 16, 16, 16, 16, 2]
   activation: 'relu'
   use_bias: true
 training:
@@ -29,7 +29,7 @@ training:
     batch_size: 32
     patience: 10
   sampler:
-    name: 'mclmc'
+    name: 'nuts'
     warmup_steps: 50000
     n_chains: 12
     n_samples: 10000
